assets/css/order-styles.css
/* wc orders list */
.type-shop_order .column-wc_actions a.button.wpo_wcpdf,
.type-shop_order .column-wc_actions a.button.wpo_wcpdf:hover,
.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf,
.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf:hover {
	background-repeat: no-repeat;
	background-position: center;
	text-align: center;
	background-size: 16px 16px;
}

.type-shop_order .column-wc_actions a.button.wpo_wcpdf > svg,
.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf > svg {
	display: block;
	position: absolute;
	width: 10px;
	height: 10px;
	bottom: 1px;
	background: #f6f7f7;
}

.type-shop_order .column-wc_actions a.button.wpo_wcpdf.exists > svg.icon-exists,
.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf.exists > svg.icon-exists {
	left: auto;
	right: 2px;
	fill: #2aad2a;
}

.type-shop_order .column-wc_actions a.button.wpo_wcpdf.printed > svg.icon-printed,
.woocommerce_page_wc-orders .column-wc_actions a.button.wpo_wcpdf.printed > svg.icon-printed {
	left: 2px;
	right: auto;
	fill: #51266b;
}

.wpo_wcpdf-actions a.button.exists > svg {
	width: 14px;
	height: 14px;
	line-height: 30px;
	margin-left: 4px;
	margin-bottom: 3px;
	fill: #2aad2a;
	vertical-align: middle;
}

.wpo_wcpdf-actions .printed-data,
.wcpdf-data-fields .printed-data {
	font-size: 8pt;
	color: #999;
	margin-left: 5px;
	vertical-align: middle;
	margin-top: 3px !important;
}

.wpo_wcpdf-actions .printed-data > svg,
.wcpdf-data-fields .printed-data > svg {
	width: 14px;
	height: 14px;
	background: #fff;
	fill: #999;
	vertical-align: middle;
	margin-right: 3px;
}

.wpo_wcpdf-actions a.unmark_printed,
.wcpdf-data-fields a.unmark_printed {
	margin-left: 4px;
	color: #a00;;
}

.widefat .column-pdf_invoice_number {
	width: 110px;
}

@media screen and (max-width: 782px) {
	.wp-list-table .column-pdf_invoice_number, .wp-list-table tr:not(.inline-edit-row):not(.no-items) td.column-pdf_invoice_number:not(.check-column) {
		display: none;
	}
	.wp-list-table tr:not(.inline-edit-row):not(.no-items) td.column-pdf_invoice_number {
		padding: 3px 8px 3px 35%
	}
}

#wpo_wcpdf-data-input-box > .inside {
	margin: 0;
	padding: 10px 0;
	background-color: #f8f8f8;
}

#wpo_wcpdf-data-input-box h4 {
	font-size: 14px;
	line-height: 1.4;
	margin: 0;
}

#wpo_wcpdf-data-input-box p {
	margin: 0.5em 0;
}

#wpo_wcpdf-data-input-box .form-field input {
	width: auto;
}

.wcpdf-data-fields {
	margin-left: 10px;
	margin-right: 10px;
	margin-bottom: 10px;
	background-color: white;
	border: 1px solid #c3c4c7;
	box-shadow: 0 1px 1px rgba(0,0,0,.04);
}

.wcpdf-data-fields:last-child {
	margin-bottom: 0;
}

.wcpdf-data-fields .read-only {
	height:auto;
	display:block;
	padding: 10px;
}

.wcpdf-data-fields .editable,
.wcpdf-data-fields .editable-notes {
	height:auto;
	display:none;
	padding: 10px;
}

.wcpdf-data-fields h4 {
	padding: 10px;
	border-bottom: 1px solid #dfdfdf;
}

/* Edit buttons Invoice, Proforma and Credit */
.wcpdf-data-fields h4 .dashicons:first-of-type {
	margin-left:20px !important;	
}

.wcpdf-data-fields .wpo-wcpdf-edit-date-number,
.wcpdf-data-fields .wpo-wcpdf-delete-document,
.wcpdf-data-fields .wpo-wcpdf-regenerate-document,
.wcpdf-data-fields .wpo-wcpdf-edit-document-notes {
	opacity:0.5;
}

.wcpdf-data-fields .wpo-wcpdf-edit-date-number:hover,
.wcpdf-data-fields .wpo-wcpdf-delete-document:hover,
.wcpdf-data-fields .wpo-wcpdf-regenerate-document:hover,
.wcpdf-data-fields .wpo-wcpdf-edit-document-notes:hover {
	opacity:1;
	cursor:pointer;
}

.wcpdf-data-fields .wpo-wcpdf-document-buttons {
	display: none;
	padding: 10px;
	border-top: 1px solid #dfdfdf;
}

.wcpdf-data-fields h4 .wcpdf-regenerate-spin {
	opacity: 1;
 	-webkit-animation: spin 1.6s linear infinite; /* Safari */
 	animation: spin 1.6s linear infinite;
 	pointer-events: none;
}

/* Safari */
@-webkit-keyframes wcpdf-regenerate-spin {
	0% { -webkit-transform: rotate(0deg); }
	100% { -webkit-transform: rotate(-360deg); }
}

@keyframes wcpdf-regenerate-spin {
	0% { transform: rotate(0deg); }
	100% { transform: rotate(-360deg); }
}
.pdf-hide{display: none}

